# cktap-protocol-flutter

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: build.yml
android/: CMakeLists.txt  build.gradle  build_libsecp256k1.sh  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: test.cpp
android/src/main/kotlin/com/example/cktap_protocol/: CKTapProtocolPlugin.kt
contrib/: .pubignore
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/cktap_protocol_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/bloc/: card_bloc.dart  card_events.dart  card_states.dart
example/lib/ui/: home_screen.dart
example/test/: widget_test.dart
ios/: build_tap_protocol.sh  cktap_protocol.podspec
ios/Classes/: cktap_protocol.cpp
lib/: cktap.dart  cktap_protocol.dart  cktap_protocol_bindings_generated.dart  cktap_protocol_method_channel.dart  cktap_protocol_platform_interface.dart  cktapcard.dart  exceptions.dart  satscard.dart  tap_protocol.dart  tapsigner.dart  transport.dart
lib/src/: cktap_implementation.dart  cktap_protocol.dart  cktapcard.dart  implementation.dart  native_thread.dart  nfc_bridge.dart  nfc_manager_transport.dart  satscard.dart  tapsigner.dart  transport_nfc_manager.dart  utils.dart
lib/src/error/: types.dart  validation.dart
lib/src/internal/: generated_bindings.dart  library.dart  native_thread.dart  utils.dart
lib/src/native/: bindings.dart  factories.dart  library.dart  thread.dart  translations.dart
scripts/: install_deps_mac.sh  update_submodules.bat  update_submodules.sh
src/: CMakeLists.txt  Enums.cpp  Enums.h  Exports.cpp  Exports.h  Structs.h  cktap_protocol.cpp  cktap_protocol.h
src/Internal/: TapProtocolThread.cpp  TapProtocolThread.h  Utils.cpp  Utils.h
src/cpp/: .gitignore  CMakeLists.txt  Enums.cpp  Enums.h  Exports.cpp  Exports.h  Macros.h  Structs.h  enums.cpp  enums.h  exports.cpp  exports.h  macros.h  structs.h
src/cpp/Internal/: Exceptions.h  TapProtocolThread.cpp  TapProtocolThread.h  Utils.cpp  Utils.h
src/cpp/internal/: card_operation.cpp  card_operation.h  exceptions.cpp  exceptions.h  globals.cpp  globals.h  macros.h  tap_protocol_thread.cpp  tap_protocol_thread.h  utils.cpp  utils.h
src/exports/: cktapcard.cpp  cktapcard.h  satscard.cpp  satscard.h  tapsigner.cpp  tapsigner.h
src/internal/: transport.cpp  transport.h
test/: cktap_protocol_method_channel_test.dart  cktap_protocol_test.dart
